lab1/Test/L1-A-13-63.output
Error Type B at Line 1
Error Type B at Line 30
Error Type B at Line 44
Error Type B at Line 48
Error Type A at Line 49
Error Type A at Line 50
Error Type B at Line 53
Error Type A at Line 56
Error Type B at Line 60
